--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
